--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,13 @@ jobs:
       - name: check java version
         run: java -version
 
-      - name: gadle build
+      - name: gradle build
         run: gradle build
+
+      - name: gradlew build
+        run: ./gradlew build
+
+      - name: docker version
+        run: |
+          docker -v
+          docker
