--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,9 @@ jobs:
           docker images -a
 
       - name: docker build
-        run: docker build . -t demo-kotlin2.0
+        run: |
+          docker build . -t demo-kotlin2.0
+          docker images -a
+
+      - name: docker login
+        run: docker login -u ${{ secrets.dockeruser }} -p ${{ secrets.dockerpass }}
