--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,6 @@ jobs:
 
       - name: docker login
         run: docker login -u ${{ secrets.dockeruser }} -p ${{ secrets.dockerpass }}
+
+      - name docker push
+      - run: docker push demo-kotlin2.0
