--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,5 +57,5 @@ jobs:
       - name: docker login
         run: docker login -u ${{ secrets.dockeruser }} -p ${{ secrets.dockerpass }}
 
-      - name docker push
+      - name: docker push
       - run: docker push demo-kotlin2.0
