--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: docker build
         run: |
-          docker build . -t demo-kotlin2.0
+          docker build . -t neriyan/demo-kotlin2.0
           docker images -a
 
       - name: docker login
