--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         uses: azure/login@v1
         with:
           creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          allow-no-subscriptions: true
+          #allow-no-subscriptions: true
 
       - name: AKS Login
         uses: wemogy/aks-login-action@1.2.1
