--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,10 @@ jobs:
           creds: '${{ secrets.AZURE_CREDENTIALS }}'
           #allow-no-subscriptions: true
 
+      - name: Set az subscription
+        run: az account set --subscription ${{ secrets.AZURE_AD_SUBSCRIPTION_ID }}
+
+
       - name: AKS Login
         uses: wemogy/aks-login-action@1.2.1
         with:
