--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           allow-no-subscriptions: true
 
       - name: Get subscription
-        run: az account show --query id --output tsv
+        run: az account show
 
 
       - name: AKS Login
