--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,22 +34,12 @@ jobs:
         run: az account show
 
 
-      - name: AKS Login
-        uses: wemogy/aks-login-action@1.2.1
+      - name: Login to cluster
+        uses: azure/aks-set-context@v1
         with:
-          name: githubactionaks
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          cluster-name: githubactionaks
           resource-group: githubRG
-          client-id: ${{ secrets.AZURE_AD_CLIENT_ID }}
-          client-secret: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-          tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_AD_SUBSCRIPTION_ID }}
-
-      #- name: Login to cluster
-       # uses: azure/aks-set-context@v1
-        #with:
-         # creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          #cluster-name: githubactionaks
-          #resource-group: githubRG
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
