--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -21,3 +21,5 @@ jobs:
           mv terraform /usr/local/bin
           terraform --version
           rm terraform.zip
+
+      - name: Install TFLint
