--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -16,10 +16,14 @@ jobs:
 
       - name: Intall pre-reqs
         run: |
-          curl -SL "https://releases.hashicorp.com/terraform/1.0.8/terraform_1.0.8_linux_amd64.zip" --output terraform.zip
+          curl -SL "https://releases.hashicorp.com/terraform/1.2.5/terraform_1.2.5_linux_amd64.zip" --output terraform.zip
           unzip terraform.zip
           mv terraform /usr/local/bin
           terraform --version
           rm terraform.zip
 
       - name: Install TFLint
+        run: |
+          wget https://github.com/terraform-linters/tflint/releases/v0.25.0/tflint_linux_amd64.zip
+          unzip tflint_linux_amd64.zip
+          mv tflint /usr/local/bin
