--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -10,13 +10,18 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        shell: bash
+        working-directory: terraform
+
     steps:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: Intall pre-reqs
+      - name: Install pre-reqs
         run: |
-          curl -SL "https://releases.hashicorp.com/terraform/1.2.5/terraform_1.2.5_linux_amd64.zip" --output terraform.zip
+          curl -SL "https://releases.hashicorp.com/terraform/1.3.9/terraform_1.3.9_linux_amd64.zip" --output terraform.zip
           unzip terraform.zip
           mv terraform /usr/local/bin
           terraform --version
@@ -27,3 +32,6 @@ jobs:
           wget https://github.com/terraform-linters/tflint/releases/download/v0.25.0/tflint_linux_amd64.zip
           unzip tflint_linux_amd64.zip
           mv tflint /usr/local/bin
+
+      - name: Terraform init
+        run: terraform init
