--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -43,3 +43,6 @@ jobs:
 
       - name: Terraform plan
         run: terraform plan
+
+      - name: Terraform applu
+        run: terraform apply -auto-approve
