--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Terraform fmt
         id: fmt
-        run: terraform fmt -check
+        run: terraform fmt
         #continue-on-error: true
 
       - name: Terraform Init
