--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -73,21 +73,21 @@ jobs:
       - name: Terraform format
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_action_version: 0.14.8
-          tf_action_subcommand: 'fmt'
+          tf_actions_version: 0.14.8
+          tf_actions_subcommand: 'fmt'
           tf_actions_working_dir: "./terraform"
 
       - name: Terraform init
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_action_version: 0.14.8
-          tf_action_subcommand: 'init'
+          tf_actions_version: 0.14.8
+          tf_actions_subcommand: 'init'
           tf_actions_working_dir: "./terraform"
 
       - name: Terraform plan
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_action_version: 0.14.8
-          tf_action_subcommand: 'plan'
+          tf_actions_version: 0.14.8
+          tf_actions_subcommand: 'plan'
           tf_actions_working_dir: "./terraform"
 
