Add actions for terraform

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -20,32 +20,32 @@ jobs:
         shell: bash
         working-directory: terraform
 
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: hashicorp/setup-terraform@v2
-#
-#      - name: Terraform fmt
-#        id: fmt
-#        run: terraform fmt
-#        #continue-on-error: true
-#
-#      - name: Terraform Init
-#        id: init
-#        run: terraform init
-#
-#      - name: Terraform Validate
-#        id: validate
-#        run: terraform validate -no-color
-#
-#      - name: Terraform Plan
-#        id: plan
-#        run: terraform plan -no-color
-#        #continue-on-error: true
-
-
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt
+        #continue-on-error: true
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        #continue-on-error: true
+
+
+#    steps:
+#      - name: checkout
+#        uses: actions/checkout@v2
 
 #      - name: Install pre-reqs
 #        run: |
@@ -70,24 +70,24 @@ jobs:
 #      - name: Terraform applu
 #        run: terraform apply -auto-approve
 
-      - name: Terraform format
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.14.8
-          tf_actions_subcommand: 'fmt'
-          tf_actions_working_dir: "./terraform"
-
-      - name: Terraform init
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.14.8
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: "./terraform"
-
-      - name: Terraform plan
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.14.8
-          tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: "./terraform"
+#      - name: Terraform format
+#        uses: hashicorp/terraform-github-actions@master
+#        with:
+#          tf_actions_version: 0.14.8
+#          tf_actions_subcommand: 'fmt'
+#          tf_actions_working_dir: "./terraform"
+#
+#      - name: Terraform init
+#        uses: hashicorp/terraform-github-actions@master
+#        with:
+#          tf_actions_version: 0.14.8
+#          tf_actions_subcommand: 'init'
+#          tf_actions_working_dir: "./terraform"
+#
+#      - name: Terraform plan
+#        uses: hashicorp/terraform-github-actions@master
+#        with:
+#          tf_actions_version: 0.14.8
+#          tf_actions_subcommand: 'plan'
+#          tf_actions_working_dir: "./terraform"
 
