--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -43,7 +43,7 @@ jobs:
         #continue-on-error: true
 
       - name: Terraform apply
-        run: terraform apply
+        run: terraform apply -auto-approve
 
 
 #    steps:
